--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<div class="tweet-input-area">
 			<img src="images/scrimbalogo.png" class="profile-pic">
 			<textarea placeholder="What's happening?" id="tweet-input"></textarea>
+			<div class="warning"></div>
 		</div>
 		<button id="tweet-btn">Tweet</button>
 		<div class="feed" id="feed">
